--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/practice/style.css">
   <title>Javeria Tabassum</title>
 </head>
 
@@ -56,7 +56,7 @@
 
     </div>
     <div class="intro-right">
-      <img src="/laptop.png" alt="">
+      <img src="/practice/laptop.png" alt="">
       <div class="box"></div>
     </div>
   </div>
@@ -76,8 +76,8 @@
       easing: 'ease',
     });
   </script>
-  <script src="/js/jquery-3.5.1.min.js"></script>
-  <script src="/myanimations.js"></script>
+  <script src="/practice/js/jquery-3.5.1.min.js"></script>
+  <script src="/practice/myanimations.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
