--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap"
     rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,400;1,900&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="/practice/style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>Javeria Tabassum</title>
 </head>
 
@@ -36,34 +38,131 @@
           <a class="nav-link" href="/index.html#about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/index.html#education">Education</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/index.html#skills">Skills</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/index.html#portfolio">Portfolio</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/index.html#contact">Contact</a>
-        </li>
       </ul>
-      <button class="btn btn-outline-light my-2 my-sm-0 px-5" type="submit">Hire Me!</button>
+      <button class="btn btn-outline-light my-2 my-sm-0 px-5" type="submit"><a
+          href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank">Contact on
+          Linkedin</a></button>
     </div>
   </nav>
 
 
-  <div class="intros">
+  <div class="intros" data-aos="fade-in">
     <div class="intro-left">
-      <h1><span class="hello">Hello ! </span> <br> I am Javeria Tabassum<br> </h1>
-
+      <h1><span class="hello">Hello ! </span> <br>I am Javeria Tabassum<br> </h1>
     </div>
     <div class="intro-right">
-      <img src="/practice/laptop.png" alt="">
+      <img src="/laptop.png" alt="">
       <div class="box"></div>
     </div>
   </div>
 
+  <!-- About  -->
+  <hr class=" featurette-divider" id="about">
+  <div class="container container-fluid" data-aos="fade-up">
+    <div class="about-heading mt-5 pt-5 pb-2">
+      <h1 class="text-center">ABOUT</h1>
+    </div>
+    <div class="about" data-aos="fade-up">
+      <p class="">My name is Javeria Tabassum. I am a frontend web developer with a good grip on HTML, CSS, JS,
+        Bootstrap, jQuery, SQL, MySQL. I am novice in PERN Development. I am an AI enthusiast. I like to learn and explore
+        new things.
+        <br>
+        <br>
+        I am currently working as a Research Associate at WOWPK (Women Of Wonders Pakistan). As a Research associate, I am helping them recognize women who have achieved big with their hard work and strong drive.
+        <br>
+        <br>
+        I had completed one month Project Trainee Program at Afiniti, helped in quality assurance and Black Box testing. Checking the authentication, state of the incoming and outgoing calls and reporting the errors of the WebApp to the backend team.
+        <br>
+        <br>
+        I had completed Technology Internship hosted by Bright Network. I took part in this three days Virtual Technology Internship Experience UK hosted by Bright Network. Attended sessions by Google, Amazon and many more, from these sessions I have learnt about real world tech projects. I did a sample work and also gain experience of 1:1 networking with people around the globe.
+        <br>
+        <br>
+        Volunteered in many different events as a Event Management Team, also Former Team Member of Robotics at SENTEC NED.
+      </p>
+    </div>
+
+  </div>
+
+  <!-- Education  -->
+  <hr class=" featurette-divider" id="education">
+  <div class="container container-fluid">
+    <div class="education-heading m-5 p-5" data-aos="fade-up">
+      <h1 class="text-center">EDUCATION</h1>
+    </div>
+
+    <div class="card-deck">
+      <div class="card" data-aos="fade-up">
+        <img class="card-img-top" src="/school.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h1 class="card-title">Programmer Secondary School</h1>
+          <p class="card-text">I completed my Matriculation from Programmer Secondary School. I was good at my academics
+            and with this I was also an active participant in sports and debating.</p>
+        </div>
+        <div class="card-footer">
+          <span class="font-weight-bold">Percentage : <span style="font-family: sans-serif;">88.35%</span></span>
+        </div>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img class="card-img-top" src="/college.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h1 class="card-title">BAMM PECHS Government College</h1>
+          <p class="card-text">I completed my Intermediate from BAMM PECHS Government College for women. I was good at
+            my academics and with this I was also an active participant in sports and debating.</p>
+        </div>
+        <div class="card-footer">
+          <span class="font-weight-bold">Percentage : <span style="font-family: sans-serif;">83.5%</span></span>
+        </div>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img class="card-img-top" src="/uni.png" alt="Card image cap">
+        <div class="card-body">
+          <h1 class="card-title">NED University of Engineering & Technology</h1>
+          <p class="card-text">Currently studying Computer Systems Engineering (Second year).
+            I am currently enrolled in 5th semester, learning web development and with this I am also active in
+            different societies of university.</p>
+        </div>
+        <div class="card-footer">
+          <span class="font-weight-bold">CGPA : <span style="font-family: sans-serif;">3.54</span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- skills  -->
+  <hr class=" featurette-divider" id="skills">
+  <div class="skills-heading m-5 p-5" data-aos="fade-up">
+    <h1 class="text-center">SKILLS</h1>
+  </div>
+  <div class="d-flex flex-column align-items-center justify-content-center m-5">
+    <div class="logo-image">
+      <img src="/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
+      <img src="/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-left">
+    </div>
+  </div>
 
 
-
+  <footer>
+    <div class="footer-color d-flex justify-content-center align-items-center">
+      <div class="copyright mx-5 my-2">
+        <p class="text-light">2020 &copy; All Rights Reserved.</p>
+      </div>
+      <div class="linkedin mx-4 my-2">
+        <a href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank"><img src="/linkedin.png"
+            alt=""></a>
+      </div>
+      <div class="twitter mx-4 my-2">
+        <a href="https://twitter.com/Javeria_JT" target="_blank"><img src="/twitter.png" alt=""></a>a
+      </div>
+    </div>
+  </footer>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -72,12 +171,12 @@
     AOS.init({
       offset: 120, // offset (in px) from the original trigger point
       delay: 0, // values from 0 to 3000, with step 50ms
-      duration: 400, // values from 0 to 3000, with step 50ms
+      duration: 1500, // values from 0 to 3000, with step 50ms
       easing: 'ease',
     });
   </script>
-  <script src="/practice/js/jquery-3.5.1.min.js"></script>
-  <script src="/practice/myanimations.js"></script>
+  <script src="/js/jquery-3.5.1.min.js"></script>
+  <script src="/myanimations.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
