--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       easing: 'ease',
     });
   </script>
-  <script src="/js/jquery-3.5.1.min.js"></script>
+  <script src="/practice/jquery-3.5.1.min.js"></script>
   <script src="/practice/myanimations.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
