--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="/practice/style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>Javeria Tabassum</title>
 </head>
 
 <body>
-  <nav class="navbar fixed-top scrolling-navbar navbar-expand-lg navbar-dark bg-purple py-4">
-    <a class="navbar-brand mx-5" href="/practice/index.html">JT</a>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light p-3">
+    <a class="navbar-brand" href="/index.html">JT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,35 +32,35 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/practice/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/practice/index.html#about">About</a>
+          <a class="nav-link" href="/index.html#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/practice/index.html#education">Education</a>
+          <a class="nav-link" href="/index.html#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/practice/index.html#skills">Skills</a>
+          <a class="nav-link" href="/index.html#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/practice/index.html#portfolio">Portfolio</a>
+          <a class="nav-link" href="/index.html#portfolio">Portfolio</a>
         </li>
       </ul>
-      <button class="btn btn-outline-light my-2 my-sm-0 px-5" type="submit"><a
+      <button class="btn btn-outline-dark my-2 my-sm-0 px-5" type="submit"><a
           href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank">Contact on
           Linkedin</a></button>
     </div>
   </nav>
 
-
-  <div class="intros" data-aos="fade-in">
-    <div class="intro-left">
-      <h1><span class="hello">Hello ! </span> <br>I am Javeria Tabassum<br> </h1>
-    </div>
-    <div class="intro-right">
-      <img src="/practice/laptop.png" alt="">
-      <div class="box"></div>
+  <div class="intros d-flex flex-wrap justify-content-between align-items-center">
+    <div class="intro-left" data-aos="fade-right">
+        <p class="hello">Hello ! </p>
+        <p class="name">I am Javeria Tabassum</p>
+        <p class="web">Frontend Web Developer</p>
+      </div>
+    <div class="intro-right" data-aos="fade-left">
+      <img src="/intro.png" alt="">
     </div>
   </div>
 
@@ -100,7 +100,7 @@
 
     <div class="card-deck">
       <div class="card" data-aos="fade-up">
-        <img class="card-img-top" src="/practice/school.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/school.jpg" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Programmer Secondary School</h1>
           <p class="card-text">I completed my Matriculation from Programmer Secondary School. I was good at my academics
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="card" data-aos="fade-up">
-        <img class="card-img-top" src="/practice/college.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/college.jpg" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">BAMM PECHS Government College</h1>
           <p class="card-text">I completed my Intermediate from BAMM PECHS Government College for women. I was good at
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="card" data-aos="fade-up">
-        <img class="card-img-top" src="/practice/uni.png" alt="Card image cap">
+        <img class="card-img-top" src="/uni.png" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">NED University of Engineering & Technology</h1>
           <p class="card-text">Currently studying Computer Systems Engineering (Second year).
@@ -141,25 +141,23 @@
   <div class="skills-heading m-5 p-5" data-aos="fade-up">
     <h1 class="text-center">SKILLS</h1>
   </div>
-  <div class="d-flex flex-column align-items-center justify-content-center m-5">
-    <div class="logo-image">
-      <img src="/practice/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
-      <img src="/practice/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-left">
+    <div class="logo-image d-flex flex-column align-items-center justify-content-center m-5">
+      <img src="/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
+      <img src="/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-left">
     </div>
-  </div>
 
 
   <footer>
-    <div class="footer-color d-flex justify-content-center align-items-center">
+    <div class="d-flex justify-content-center align-items-center">
       <div class="copyright mx-5 my-2">
-        <p class="text-light">2020 &copy; All Rights Reserved.</p>
+        <p class="text-dark">2020 &copy; All Rights Reserved.</p>
       </div>
       <div class="linkedin mx-4 my-2">
-        <a href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank"><img src="/practice/linkedin.png"
+        <a href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank"><img src="/linkedin.png"
             alt=""></a>
       </div>
       <div class="twitter mx-4 my-2">
-        <a href="https://twitter.com/Javeria_JT" target="_blank"><img src="/practice/twitter.png" alt=""></a>a
+        <a href="https://twitter.com/Javeria_JT" target="_blank"><img src="/twitter.png" alt=""></a>a
       </div>
     </div>
   </footer>
@@ -171,12 +169,12 @@
     AOS.init({
       offset: 120, // offset (in px) from the original trigger point
       delay: 0, // values from 0 to 3000, with step 50ms
-      duration: 1500, // values from 0 to 3000, with step 50ms
+      duration: 1100, // values from 0 to 3000, with step 50ms
       easing: 'ease',
     });
   </script>
-  <script src="/practice/jquery-3.5.1.min.js"></script>
-  <script src="/practice/myanimations.js"></script>
+  <script src="/js/jquery-3.5.1.min.js"></script>
+  <script src="/myanimations.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
