--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/practice/style.css">
   <title>Javeria Tabassum</title>
 </head>
 
@@ -32,19 +32,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/practice/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/index.html#about">About</a>
+          <a class="nav-link" href="/practice/index.html#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/index.html#education">Education</a>
+          <a class="nav-link" href="/practice/index.html#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/index.html#skills">Skills</a>
+          <a class="nav-link" href="/practice/index.html#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/index.html#portfolio">Portfolio</a>
+          <a class="nav-link" href="/practice/index.html#portfolio">Portfolio</a>
         </li>
       </ul>
       <button class="btn btn-outline-dark my-2 my-sm-0 px-5" type="submit"><a
@@ -60,7 +60,7 @@
         <p class="web">Frontend Web Developer</p>
       </div>
     <div class="intro-right" data-aos="fade-left">
-      <img src="/intro.png" alt="">
+      <img src="/practice/intro.png" alt="">
     </div>
   </div>
 
@@ -100,7 +100,7 @@
 
     <div class="card-deck">
       <div class="card" data-aos="fade-up">
-        <img class="card-img-top" src="/school.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/practice/school.jpg" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Programmer Secondary School</h1>
           <p class="card-text">I completed my Matriculation from Programmer Secondary School. I was good at my academics
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="card" data-aos="fade-up">
-        <img class="card-img-top" src="/college.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/practice/college.jpg" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">BAMM PECHS Government College</h1>
           <p class="card-text">I completed my Intermediate from BAMM PECHS Government College for women. I was good at
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="card" data-aos="fade-up">
-        <img class="card-img-top" src="/uni.png" alt="Card image cap">
+        <img class="card-img-top" src="/practice/uni.png" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">NED University of Engineering & Technology</h1>
           <p class="card-text">Currently studying Computer Systems Engineering (Second year).
@@ -142,8 +142,8 @@
     <h1 class="text-center">SKILLS</h1>
   </div>
     <div class="logo-image d-flex flex-column align-items-center justify-content-center m-5">
-      <img src="/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
-      <img src="/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-left">
+      <img src="/practice/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
+      <img src="/practice/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-left">
     </div>
 
 
