--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
     </div>
   </nav>
 
+   <div class="jumbotron jumbotron-fluid">
+    <div class="container text-center border-intro">
+        <p class="hello">Hello ! </p>
+        <p class="name">I am Javeria Tabassum</p>
+        <p class="web">Frontend Web Developer</p>
+      </div>
+  </div>
   <div class="intros d-flex flex-wrap justify-content-between align-items-center">
     <div class="intro-left" data-aos="fade-right">
         <p class="hello">Hello ! </p>
