--- a/index.html
+++ b/index.html
@@ -60,22 +60,12 @@
         <p class="web">Frontend Web Developer</p>
       </div>
   </div>
-  <div class="intros d-flex flex-wrap justify-content-between align-items-center">
-    <div class="intro-left" data-aos="fade-right">
-        <p class="hello">Hello ! </p>
-        <p class="name">I am Javeria Tabassum</p>
-        <p class="web">Frontend Web Developer</p>
-      </div>
-    <div class="intro-right" data-aos="fade-left">
-      <img src="/practice/intro.png" alt="">
-    </div>
-  </div>
-
+  
   <!-- About  -->
   <hr class=" featurette-divider" id="about">
   <div class="container container-fluid" data-aos="fade-up">
     <div class="about-heading mt-5 pt-5 pb-2">
-      <h1 class="text-center">ABOUT</h1>
+      <h1 class="">ABOUT</h1>
     </div>
     <div class="about" data-aos="fade-up">
       <p class="">My name is Javeria Tabassum. I am a frontend web developer with a good grip on HTML, CSS, JS,
@@ -102,7 +92,7 @@
   <hr class=" featurette-divider" id="education">
   <div class="container container-fluid">
     <div class="education-heading m-5 p-5" data-aos="fade-up">
-      <h1 class="text-center">EDUCATION</h1>
+      <h1 class="">EDUCATION</h1>
     </div>
 
     <div class="card-deck">
@@ -146,7 +136,7 @@
   <!-- skills  -->
   <hr class=" featurette-divider" id="skills">
   <div class="skills-heading m-5 p-5" data-aos="fade-up">
-    <h1 class="text-center">SKILLS</h1>
+    <h1 class="">SKILLS</h1>
   </div>
     <div class="logo-image d-flex flex-column align-items-center justify-content-center m-5">
       <img src="/practice/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
@@ -154,19 +144,10 @@
     </div>
 
 
-  <footer>
-    <div class="d-flex justify-content-center align-items-center">
+  <footer class = "footer">
       <div class="copyright mx-5 my-2">
         <p class="text-dark">2020 &copy; All Rights Reserved.</p>
       </div>
-      <div class="linkedin mx-4 my-2">
-        <a href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank"><img src="/linkedin.png"
-            alt=""></a>
-      </div>
-      <div class="twitter mx-4 my-2">
-        <a href="https://twitter.com/Javeria_JT" target="_blank"><img src="/twitter.png" alt=""></a>a
-      </div>
-    </div>
   </footer>
 
   <!-- Optional JavaScript -->
