--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light p-3">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light p-3">
     <a class="navbar-brand" href="/index.html">JT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,8 +53,8 @@
     </div>
   </nav>
 
-   <div class="jumbotron jumbotron-fluid">
-    <div class="container text-center border-intro">
+   <div class="jumbotron">
+    <div class="text-center border-intro">
         <p class="hello">Hello ! </p>
         <p class="name">I am Javeria Tabassum</p>
         <p class="web">Frontend Web Developer</p>
@@ -91,7 +91,7 @@
   <!-- Education  -->
   <hr class=" featurette-divider" id="education">
   <div class="container container-fluid">
-    <div class="education-heading m-5 p-5" data-aos="fade-up">
+    <div class="education-heading mt-5 pt-5 pb-2" data-aos="fade-up">
       <h1 class="">EDUCATION</h1>
     </div>
 
@@ -135,7 +135,7 @@
 
   <!-- skills  -->
   <hr class=" featurette-divider" id="skills">
-  <div class="skills-heading m-5 p-5" data-aos="fade-up">
+  <div class="skills-heading mt-5 pt-5 pb-2" data-aos="fade-up">
     <h1 class="">SKILLS</h1>
   </div>
     <div class="logo-image d-flex flex-column align-items-center justify-content-center m-5">
@@ -145,7 +145,7 @@
 
 
   <footer class = "footer">
-      <div class="copyright mx-5 my-2">
+      <div class="copyright mt-5 pt-5 pb-2">
         <p class="text-dark">2020 &copy; All Rights Reserved.</p>
       </div>
   </footer>
