--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light p-3">
-    <a class="navbar-brand" href="/index.html">JT</a>
+  <nav class="navbar navbar-expand-lg navbar-light p-3">
+    <a class="navbar-brand" href="/practice/index.html">JT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
           <a class="nav-link" href="/practice/index.html#portfolio">Portfolio</a>
         </li>
       </ul>
-      <button class="btn btn-outline-dark my-2 my-sm-0 px-5" type="submit"><a
+      <button class="btn btn-light btn-outline-dark my-2 my-sm-0 px-5" type="submit"><a
           href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank">Contact on
           Linkedin</a></button>
     </div>
@@ -140,13 +140,13 @@
   </div>
     <div class="logo-image d-flex flex-column align-items-center justify-content-center m-5">
       <img src="/practice/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
-      <img src="/practice/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-left">
+      <img src="/practice/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-right">
     </div>
 
 
   <footer class = "footer">
       <div class="copyright mt-5 pt-5 pb-2">
-        <p class="text-dark">2020 &copy; All Rights Reserved.</p>
+        <p class="text-dark text-center">2020 &copy; All Rights Reserved.</p>
       </div>
   </footer>
 
