--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/practice/index.html#skills">Skills</a>
         </li>
-        <li class="nav-item">
+<!--         <li class="nav-item">
           <a class="nav-link" href="/practice/index.html#portfolio">Portfolio</a>
-        </li>
+        </li> -->
       </ul>
       <button class="btn btn-light btn-outline-dark my-2 my-sm-0 px-5" type="submit"><a
           href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank">Contact on
