--- a/index.html
+++ b/index.html
@@ -135,13 +135,15 @@
 
   <!-- skills  -->
   <hr class=" featurette-divider" id="skills">
-  <div class="skills-heading mt-5 pt-5 pb-2" data-aos="fade-up">
-    <h1 class="">SKILLS</h1>
-  </div>
+  <div class = "container container-fluid">
+    <div class="skills-heading mt-5 pt-5 pb-2" data-aos="fade-up">
+      <h1 class="">SKILLS</h1>
+    </div>
     <div class="logo-image d-flex flex-column align-items-center justify-content-center m-5">
       <img src="/practice/logos.png" id="web-logo" alt="" class="img-fluid" data-aos="fade-right">
       <img src="/practice/logos2.png" id="web-logo2" class="img-fluid" data-aos="fade-right">
     </div>
+  </div>
 
 
   <footer class = "footer">
