--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a class="nav-link" href="/practice/index.html#portfolio">Portfolio</a>
         </li> -->
       </ul>
-      <button class="btn btn-light btn-outline-dark my-2 my-sm-0 px-5" type="submit"><a
+      <button class="btn btn-outline-dark my-2 my-sm-0 px-5" type="submit"><a
           href="https://www.linkedin.com/in/javeria-tabassum-176204194/" target="_blank">Contact on
           Linkedin</a></button>
     </div>
